--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@fontsource/poppins": "^5.1.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@vercel/analytics": "^1.3.2",
     "astro": "^4.16.7",
     "astro-icon": "^1.1.1",
     "framer-motion": "^11.11.9",
